# AMAS

./: setup.cfg  setup.py
config/: quest3_cr5_teleop.yaml
cr5_moveit/launch/: dobot_moveit.launch.py
cr5_tele/.claude/: settings.local.json
cr5_tele/collab-sim/: .gitattributes  .gitignore  LICENSE  README.md
cr5_tele/collab-sim/collab_sim/: collab_robot_controller.py  collab_teleop_utils.py  collab_vrteleop.py  replay_states.py
cr5_tele/collab-sim/collab_sim/demos/: dual_franka_mpc_teleop.py  franka_mpc_example.py
cr5_tele/collab-sim/collab_sim/isaac_sim_utils/: README.md  ghost_franka.py  linalg_utils.py
cr5_tele/collab-sim/config/: environment.yml  steamvr_black_window_ubuntu_fix.sh
cr5_tele/collab-sim/docs/: install_docs.md  run_docs.md
cr5_tele/dobot_teleop/: README.md  servop_teleop.py  servop_test_direct.py
cr5_tele/dobot_teleop/dobot_teleop/: __init__.py  dobot_dashboard.py  quest_udp.py  teleop_mapping.py
cr5_tele/lerobot_franka_teleop/: setup.py
cr5_teleop/: cartesian_ik_teleop.py  cartesian_servo_teleop.py  keyboard_joint_teleop.py  moveit_pose_controller.py  package.xml  pose_to_joint_teleop.py  quest3_cr5_servop_teleop.py  quest3_cr5_teleop.py  quest_udp_receiver.py  setup.py
cr5_teleop/cr5_moveit/config/: cr5_servo.yaml
cr5_teleop/cr5_teleop/: ServoP_test.py  fake_quest_pose.py  quest_pose_monitor.py  test_cartesian_execute.py  test_moveit_pose.py
cr5_teleop/cr5_teleop/Readme/: Quest3真机遥操作实验流程  真实机械臂控制  笛卡尔映射
launch/: quest3_cr5_servop_teleop.launch.py  quest3_cr5_teleop.launch.py
(+1 files in other folders)
