<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cr5_teleop</name>
  <version>0.0.0</version>
  <description>CR5 teleoperation and MoveIt test scripts</description>
  <maintainer email="jiaotan@todo.todo">jiaotan</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>trajectory_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>control_msgs</depend>
  <depend>std_srvs</depend>
  <depend>dobot_msgs_v4</depend>

  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
